--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>lavey.vano.io</title>
+    <script src="/assets/vendor.bundle.js"></script>
   </head>
   <body>
     <h1>lavey.vano.io</h1>
+    <div id="main"></div>
+    <script src="/assets/app.bundle.js"></script>
   </body>
 </html>
