get angular2 working and move babel settings to .babelrc
had to use legacy package for decorators since it's still in proposal

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8-">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>lavey.vano.io</title>
     <script src="/assets/vendor.bundle.js"></script>
   </head>
   <body>
+    <app>App Loading..</app>
     <h1>lavey.vano.io</h1>
     <div id="main"></div>
     <script src="/assets/app.bundle.js"></script>
