initial version of wedding website with angular2

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>lavey.vano.io</title>
+    <link type="text/css" rel="stylesheet" href="/fonts/custom/MyFontsWebfontsKit.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/styles.css" />
+    <script src="/assets/polyfills.bundle.js"></script>
     <script src="/assets/vendor.bundle.js"></script>
   </head>
   <body>
-    <app>App Loading..</app>
-    <h1>lavey.vano.io</h1>
-    <div id="main"></div>
+    <Main>App Loading..</Main>
     <script src="/assets/app.bundle.js"></script>
   </body>
 </html>
